--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="card">
             <div class="msg-box">
-                <h1>Download your shows to watch offline.</h1>
-                <p>Available on all plans except Basic with ads.</p>
+                <h1>Enjoy on your TV.</h1>
+                <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
             </div>
             <div class="img-box">
                 <img class="card-img"
@@ -56,8 +56,8 @@
 
         <div class="card">
             <div class="msg-box">
-                <h1>Download your shows to watch offline.</h1>
-                <p>Available on all plans except Basic with ads.</p>
+                <h1>Watch everywhere.</h1>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
             </div>
             <div class="img-box">
                 <img class="card-img"
